<resources>
    <string name="app_name">Crypto HQ</string>
    <string name="search_coin">Search Coin...</string>
    <string name="read_more">Read more...</string>
    <string name="currency">Currency</string>
    <string name="usd">usd</string>
    <string name="eur">eur</string>
    <string name="usd_symbol">$</string>
    <string name="eur_symbol">€</string>
    <string name="supply">Supply</string>
    <string name="market_cap">Market Cap</string>
    <string name="price">Price</string>
    <string name="volume">volume</string>
    <string name="donate">Donate</string>
    <string name="donation_url">https://www.paypal.me/cryptohq</string>
    <string name="placeholder">Placeholder</string>
    <string name="coins">Coins</string>
    <string name="news">News</string>
    <string name="setings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_text" >This, will list your favorite coins. Please, add some coins to your favorite list and restart the widget.</string>
    <string name="general_coins">General</string>
    <string name="favorite_coins">Favorite</string>
    <string name="is_at">is at</string>
    <string name="below">Below</string>
    <string name="above">Above</string>
    <string name="type_price">Type price...</string>
    <string name="alerts">Alerts</string>
    <string name="done">Done</string>

</resources>
